--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,66 @@
-.App {
-  text-align: center;
+.nav {
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 50px;
+  padding: 10px;
+  background-color: rgb(177, 17, 17);
+  display: flex;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.logo img{
+  margin-top: 5px;
+  height: 40px;
+  width: auto;
+  border-radius: 0px;  
+  border: 0px; 
+  box-shadow: 0px 0px 0px 0px;
+  margin-left: 30px;  
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.shelfie {
+ color: white;
+ margin-top: 15px;
+ margin-left: 20px;
+ font-size: 20px; 
 }
 
-.App-title {
-  font-size: 1.5em;
+.link-wrap {
+  margin-left: 50px;
+  padding: 15px;
 }
 
-.App-intro {
-  font-size: large;
+.links {
+  color: black;
+  margin-left: 30px;
+  padding: 5px;
+  background-color: rgb(192, 65, 18);
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+img {
+  width: 380px;
+  height: 230px;
+  margin: 10px 10px;
+}
+
+p{
+  margin-top: 60px;
+  margin-right: 10px;
+}
+ 
+h2{
+  margin-left: 20px;
+} 
+
+.display {
+ display: flex;
+ position: relative;
+}
+
+.each-box {
+ padding: 10px;
+ display: flex;
+ margin-top: 30px;
+ margin-left: 30px;
+ background-color: rgb(214, 22, 22);
+ 
 }
