--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   height: 50px;
   padding: 10px;
-  background-color: rgb(177, 17, 17);
+  background-color: rgb(175, 38, 38);
   display: flex;
 }
 
@@ -25,8 +25,10 @@
 }
 
 .link-wrap {
-  margin-left: 50px;
-  padding: 15px;
+  display: flex;
+  margin-left: 40px;
+  padding: 5px;
+  margin-top: 7px;
 }
 
 .links {
@@ -34,33 +36,54 @@
   margin-left: 30px;
   padding: 5px;
   background-color: rgb(192, 65, 18);
+  border-radius: 5px;  
 }
 
-img {
+
+.redbox {
+  width: 600px;
+  height: 300px;
+  background: rgb(214, 65, 60);
+  margin: 20px auto;
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  border-radius: 10px;
+ }
+ 
+ img {
   width: 380px;
-  height: 230px;
-  margin: 10px 10px;
-}
-
-p{
-  margin-top: 60px;
-  margin-right: 10px;
+  height: 260px;
+  margin-top: 10px;
 }
  
-h2{
-  margin-left: 20px;
-} 
-
-.display {
- display: flex;
- position: relative;
-}
-
-.each-box {
- padding: 10px;
- display: flex;
- margin-top: 30px;
- margin-left: 30px;
- background-color: rgb(214, 22, 22);
+ .content {
+  width: 200px;
+  height: 280px;
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ }
  
-}
+ p {
+  text-align: start;
+  margin: 0;
+  font-size: 20px;
+ }
+ 
+ .buttonsContainer {
+  width: 160px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+ }
+ 
+ button {
+ background-color: rgb(26, 143, 26);
+ border-radius: 5px; 
+ padding: 5px;
+ }
+
