--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .nav {
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 50px;
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
+  width: 100%;
+  height: 5vh;
   padding: 10px;
   background-color: rgb(175, 38, 38);
   display: flex;
@@ -36,13 +37,14 @@
   margin-left: 30px;
   padding: 5px;
   background-color: rgb(192, 65, 18);
-  border-radius: 5px;  
+  border-radius: 5px; 
+  text-decoration: none; 
 }
 
 
 .redbox {
-  width: 600px;
-  height: 300px;
+  width: 50vw;
+  height: 20vh;
   background: rgb(214, 65, 60);
   margin: 20px auto;
   box-sizing: border-box;
@@ -52,14 +54,14 @@
  }
  
  img {
-  width: 380px;
-  height: 260px;
+  width: 20vw;
+  height: 15vh;
   margin-top: 10px;
 }
  
  .content {
-  width: 200px;
-  height: 280px;
+  width: 40vw;
+  height: 15vh;
   box-sizing: border-box;
   padding: 20px;
   display: flex;
@@ -74,8 +76,8 @@
  }
  
  .buttonsContainer {
-  width: 160px;
-  height: 50px;
+  width: 20vw;
+  height: 0vh;
   display: flex;
   justify-content: space-between;
   align-items: center
