--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,37 @@
 .nav {
-  /* background-size: contain; */
-  /* background-repeat: no-repeat; */
   width: 100%;
-  height: 5vh;
+  height: 60px;
   padding: 10px;
   background-color: rgb(175, 38, 38);
   display: flex;
+  margin: 0px;
 }
 
 .logo img{
   margin-top: 5px;
-  height: 40px;
+  height: 50px;
   width: auto;
-  border-radius: 0px;  
-  border: 0px; 
+  border-radius: 0px;
+  border: 0px;
+  -webkit-box-shadow: 0px 0px 0px 0px;
   box-shadow: 0px 0px 0px 0px;
-  margin-left: 30px;  
+  margin-left: 30px; 
 }
 
 .shelfie {
  color: white;
  margin-top: 15px;
  margin-left: 20px;
- font-size: 20px; 
+ font-size: 25px; 
 }
 
 .link-wrap {
   display: flex;
-  margin-left: 40px;
+  justify-content: center;
+  margin-left: 30px;
   padding: 5px;
-  margin-top: 7px;
+  margin-top: 10px;
+  margin-bottom:10px;
 }
 
 .links {
@@ -44,9 +46,9 @@
 
 .redbox {
   width: 50vw;
-  height: 20vh;
+  height: 35vh;
   background: rgb(214, 65, 60);
-  margin: 20px auto;
+  margin: 30px auto;
   box-sizing: border-box;
   padding: 10px;
   display: flex;
@@ -54,9 +56,9 @@
  }
  
  img {
-  width: 20vw;
-  height: 15vh;
-  margin-top: 10px;
+  width: 50%;
+  height: auto;
+  margin-top: 0px;
 }
  
  .content {
@@ -76,6 +78,7 @@
  }
  
  .buttonsContainer {
+  margin-top: 18vh;
   width: 20vw;
   height: 0vh;
   display: flex;
@@ -86,6 +89,38 @@
  button {
  background-color: rgb(26, 143, 26);
  border-radius: 5px; 
- padding: 5px;
+ padding: 7px;
  }
 
+.form{
+  background-color: rgb(26, 143, 26);  
+  padding: 10px;
+  width: 40%;
+  height: auto; 
+  margin: 30px auto;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.form_img{
+  width: 30%;
+  height: auto;
+  margin-top: 0px;
+  background-color: red;
+  
+}
+
+.add_inventory{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+input{
+  width: 98%;
+}
+
+.add{
+  background-color: rgb(214, 65, 60);
+  
+}
