--- a/src/App.css
+++ b/src/App.css
@@ -95,19 +95,29 @@
 .form{
   background-color: rgb(26, 143, 26);  
   padding: 10px;
-  width: 40%;
+  width: 30%;
   height: auto; 
   margin: 30px auto;
   box-sizing: border-box;
   border-radius: 10px;
+  
 }
 
 .form_img{
-  width: 30%;
-  height: auto;
+  width: 100%;
+  height: 200PX;
   margin-top: 0px;
-  background-color: red;
-  
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+}
+
+.img_in_from{
+  width: 80%;
+  height: 180PX;
+  margin-top: 0px;
 }
 
 .add_inventory{
